--- a/rpc_on_hydrogen.tex
+++ b/rpc_on_hydrogen.tex
@@ -1,6 +1,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{RPC on hydrogen}
 
+Has been measured in \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
+
+{\red
+  \begin{itemize}
+  \item 
+    need an estimate of the fraction of stopped pions captured by hydrogen
+  \item
+    after that is determined, use spectrum on CH2 to generate photons
+  \end{itemize}
+}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: t
