--- a/AAA_README.org
+++ b/AAA_README.org
@@ -1,6 +1,7 @@
 #+startup:fold
 * ------------------------------------------------------------------------------
 * directory: file:./
+* figures  : file:figures/
 * ------------------------------------------------------------------------------
 * note: file:tmp/mu2e-50071.pdf
 * setup                                                                      
@@ -13,7 +14,19 @@ cd mu2e-50071.degrader_rpc
 make note
 okular tpm/mu2e-50071.pdf &
 #+end_src
-* absolute normalization:
+* digitized figures from Bistirlich et al (1971) : file:csv
+* degrader geometry and weight                                               
+ 4mm TI: 0.4*4.5 = 1.8g/cm^2
+ 9mm CH2 + 1.0mm Pb: : 2.0 g/cm^2   .. \pi*15^2*(0.9*0.95 + 0.08*11.34): approx 2 g/cm^2
+ 9mm CH2 + 0.8mm Pb: : 1.76 g/cm^2 
+
+- reduce the outer radius: don't need R=15cm
+
+ CH2 disk R=14 cm, weight        : 0.9*0.95*\pi*14^2 = 526 gr
+ Pb  foil R=10cm thickness 0.8mm : 0.08*11.34*314    = 285 gr
+ total                           : 811 gr
+ 
+* absolute rates:                                                            
 - use histogram file pipenu.bpim0b0r000.murat_spmc_ana.0000.hist
 
 |-----------------------+-------+----------+----------------|
@@ -23,6 +36,29 @@ okular tpm/mu2e-50071.pdf &
 | stops in CH2:T>200 ns | 68.48 |   2.6e-7 | sum of weights |
 |-----------------------+-------+----------+----------------|
 
+for a 1 mm thick ring: probability to have an event with two tracks: 7e-5
+
+2.6e-7*7.e-5*3e-2 = 40e-14 = 5.5e-13 ;
+
+with the new degrader geometry: R=250 mm  100 um thick :
+
+139 events in the histogram per 10^5 events generated with 0 < cos(theta) < 0.1.
+This corresponds to the acceptance of 139/10^5*0.1/2 = 1.4e-3*5e-2 = 7e-5
+
+2.6e-7*7e-5*1.e-2 = 1.8e-13
+
+- 1-batch mode: 1.6e7 POT/pulse x 1.6e5 pulses/sec = 2.5e12 protons/sec
+- assume 10% intensity and 50% data taking efficiency: f = 0.05 = 5.e-2
+- under these assumptions: ~ 1.2e11 protons/sec
+- 1 day: 86400 sec ==> 1.1e16 POT ---> 2,000 events
+
 so reducing intensity by an additional factor and starting from an earlier time
 could be beneficial
+
+* fit RPC yield on CH2                                                       
+- code: file:scripts/fit_ch2.C
+- preliminary results: file:./figures/png/fit_preliminary.png
+- the outcome: (1-fH2)*0.75  
+* energy loss correlation with the photon emission angle                     
+  file:figures/png/rpc03b0s44r0000_drpc_2_smvd13_vs_sinth.png
 * ------------------------------------------------------------------------------
