- add first plotting scripts

--- a/mu2e-50071.tex
+++ b/mu2e-50071.tex
@@ -190,22 +190,7 @@ TODO items:
 
 \include{rpc_on_hydrogen}
 \include{geometry_optimization}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Contribution of the $\rm CH_2$ disk }
-
-\begin{itemize}
-\item
-  compare 1mm to 0.1 mm to 0.2mm
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Contribution of the Pb foil}
-
-\begin{itemize}
-\item
-  compare 1mm to 0.1 mm to 0.2mm
-\end{itemize}
-
+\include{reconstructed_spectrum}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Electric current}
