--- a/geometry_optimization.tex
+++ b/geometry_optimization.tex
@@ -28,7 +28,24 @@
     \node[anchor=south west,inner sep=0] at (0,0.) {
       % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
       \makebox[\textwidth][c] {
-        \includegraphics[width=0.9\textwidth]{png/sum_mom_vd13_001}
+        \includegraphics[width=0.9\textwidth]{pdf/figure_00010}
+      }
+    };
+    % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
+    % \node [text width=8cm, scale=1.0, rotate={90}] at (1.5,7.5) { $S_{D}$, ``discovery'' signal strength  };
+  \end{tikzpicture}
+  \caption{
+    \label{figure:sum_mom_vd10}
+    P1+P2 at VD10
+  }
+\end{figure}
+
+\begin{figure}[H]
+  \begin{tikzpicture}
+    \node[anchor=south west,inner sep=0] at (0,0.) {
+      % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
+      \makebox[\textwidth][c] {
+        \includegraphics[width=0.9\textwidth]{pdf/figure_00013}
       }
     };
     % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
@@ -36,7 +53,7 @@
   \end{tikzpicture}
   \caption{
     \label{figure:sum_mom_vd13}
-    momentum scheme calibration
+    P1+P2 at VD13
   }
 \end{figure}
 
