--- a/AAA_README.org
+++ b/AAA_README.org
@@ -27,30 +27,29 @@ okular tpm/mu2e-50071.pdf &
  total                           : 811 gr
  
 * absolute rates:                                                            
-- use histogram file pipenu.bpim0b0r000.murat_spmc_ana.0000.hist
-
-|-----------------------+-------+----------+----------------|
-| bpim0b0:              | 2.5e8 | fraction | generated POT  |
-| total stops in CH2:   |  1288 |   5.1e-6 | sum of weights |
-| stops in CH2 T>150 ns | 667.9 |   2.7e-6 | sum of weights |
-| stops in CH2:T>200 ns | 68.48 |   2.6e-7 | sum of weights |
-|-----------------------+-------+----------+----------------|
-
-for a 1 mm thick ring: probability to have an event with two tracks: 7e-5
-
-2.6e-7*7.e-5*3e-2 = 40e-14 = 5.5e-13 ;
+- use histogram files : pipenu.bpim0b0s24r0000.murat_spmc_ana.0000.hist
+| ! |                       |                | wstop_ch2 |  fr_ch2 | wstop_pb |   fr_pb |
+| $ | npot=2.5e8            |                |           |         |          |         |
+|---+-----------------------+----------------+-----------+---------+----------+---------|
+| # | total stops           |                |      1161 | 4.6e-06 |    562.6 | 2.3e-06 |
+| # | stops in CH2 T>150 ns | simp_215/etime |     574.2 | 2.3e-06 |     2.69 | 1.1e-08 |
+| # | stops in CH2:T>200 ns | simp_215/etime |     60.48 | 2.4e-07 |   0.0176 | 7.0e-11 |
+|---+-----------------------+----------------+-----------+---------+----------+---------|
+#+TBLFM: $5=$wstop_ch2/$npot;%8.1e::$7=$wstop_pb/$npot;%8.1e::
 
 with the new degrader geometry: R=250 mm  100 um thick :
 
 139 events in the histogram per 10^5 events generated with 0 < cos(theta) < 0.1.
 This corresponds to the acceptance of 139/10^5*0.1/2 = 1.4e-3*5e-2 = 7e-5
 
-2.6e-7*7e-5*1.e-2 = 1.8e-13
+2.4e-7(prob_to_stop)*7e-5(prob_of_conversion_event)*1.e-2(H2_fraction)*0.4 = 7.4-14
 
 - 1-batch mode: 1.6e7 POT/pulse x 1.6e5 pulses/sec = 2.5e12 protons/sec
 - assume 10% intensity and 50% data taking efficiency: f = 0.05 = 5.e-2
 - under these assumptions: ~ 1.2e11 protons/sec
-- 1 day: 86400 sec ==> 1.1e16 POT ---> 2,000 events
+- 1 day: 86400 sec ==> 1.1e16 POT ---> 800 events
+
+- under the same assumptions, for 2-batch mode: x2.5 .... 2,000 events
 
 so reducing intensity by an additional factor and starting from an earlier time
 could be beneficial
@@ -61,4 +60,38 @@ could be beneficial
 - the outcome: (1-fH2)*0.75  
 * energy loss correlation with the photon emission angle                     
   file:figures/png/rpc03b0s44r0000_drpc_2_smvd13_vs_sinth.png
+* Jim M. assumptions     
+
+- There are about 2000 times (?) fewer stopped pions compared to muons in the target.
+  > the total fraction is about 1/300, but the number itself doesn't mean much:
+      the timing cut makes a huge difference
+      
+- The target has a thickness of 37 plates x 0.01 cm thickness x 2.7 g/cm3 density =0.999 g/cm2
+  > OK
+  
+- The rate of stopped muons at full intensity is 1e10 per second in the Stopping Target.
+  > 3.9e7*1.6e-3*1.6e5 \sim 1e10/sec
+
+- The rate of stopped pions in the poly is therefore estimated at 1e10/2000=5e6/s (?)
+  > the same comment about the timing cut
+  
+- 3% of pions stop on hydrogen and 1/3 (?) produce a 129.4 MeV gamma. .03/3*5e6=5e4/s
+  > fraction of stopped puons in the peak: 1% \times 0.4 = 4e-3
+
+- Fractional solid angle of gold foil is approximately (pretend it is part of a sphere) =
+  3 cm wide x 2pi x 25 cm radius)/(4pi *25**2)=0.06
+  > can't make 3cm wide foil, ~1cm max...
+
+- So we get .06*5e4=3e3/s 129 MeV gammas incident on the gold and producing pairs
+
+- Maybe 10% (a guess) have roughly equal e+ and e- energies, so 3e2 viable pairs per second.
+  > this rate is known: for the simulated geometry, and 100 um thickness, the rate of events
+  > of interest is ~140e-5/20 = 7.e-5,
+  > acceptance: 1cm*2pi*25/4pi/25/25 = 1/50 = 2e-2
+  > thickness:  100um/3.3mm ~ 0.03 Xrad, the product is 6e-4
+  > out of that, about 10% are evens with two particles 20 hits each , above 30 MeV/c
+  
+- Maybe 1/3 will go downstream with a high enough helical dip angle, 100/s
+
+- We have to turn the beam down by x10 so the detectors can handle the flash, 10/s
 * ------------------------------------------------------------------------------
