--- a/geometry_optimization.tex
+++ b/geometry_optimization.tex
@@ -43,7 +43,7 @@ by a carbon foam disk, to be designed.
     \node[anchor=south west,inner sep=0] at (0,0.) {
       % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
       \makebox[\textwidth][c] {
-        \includegraphics[width=0.9\textwidth]{pdf/figure_00010}
+        \includegraphics[width=0.9\textwidth]{png/figure_00010}
       }
     };
     % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
@@ -60,7 +60,7 @@ by a carbon foam disk, to be designed.
     \node[anchor=south west,inner sep=0] at (0,0.) {
       % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
       \makebox[\textwidth][c] {
-        \includegraphics[width=0.9\textwidth]{pdf/figure_00013}
+        \includegraphics[width=0.9\textwidth]{png/figure_00013}
       }
     };
     % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
