--- a/mu2e-50071.tex
+++ b/mu2e-50071.tex
@@ -121,7 +121,7 @@
     }
 
     \vspace{1cm}
-    K.Ciampa(BU), P.Murat(FNAL)
+    K.Ciampa, J.Miller(BU), P.Murat(FNAL)
 
     % \footnote{\texttt{Fermilab; e-mail: murat@fnal.gov}}
     \vspace{0.3cm}
@@ -216,7 +216,10 @@ An estimate of the electric current can be obtained as follows:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \section {Summary}
 
-to be written
+With small modifications, the pion degrader becomes an instrument to calibrate the Mu2e
+momentum scale in full field.
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
