--- a/reconstructed_spectrum.tex
+++ b/reconstructed_spectrum.tex
@@ -10,22 +10,49 @@ reconstructed full width of the $e^+e^-$ conversion peak.
 
 We therefore use the MC truth - the sum of the two MC particle momenta recorded in front
 of the tracker - as a proxy to the reconstructed photon momentum
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Contribution of the $\rm CH_2$ disk }
-\begin{itemize}
-\item
-  compare 1mm to 0.1 mm to 0.2mm
-\end{itemize}
+\begin{figure}[H]
+  \begin{tikzpicture}
+    \node[anchor=south west,inner sep=0] at (0,0.) {
+      % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
+      \makebox[\textwidth][c] {
+        \includegraphics[width=0.9\textwidth]{png/figure_00010}
+      }
+    };
+    % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
+    % \node [text width=8cm, scale=1.0, rotate={90}] at (1.5,7.5) { $S_{D}$, ``discovery'' signal strength  };
+  \end{tikzpicture}
+  \caption{
+    \label{figure:sum_mom_vd10}
+    P1+P2 at VD10
+  }
+\end{figure}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Contribution of the Pb foil}
+\begin{figure}[H]
+  \begin{tikzpicture}
+    \node[anchor=south west,inner sep=0] at (0,0.) {
+      % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
+      \makebox[\textwidth][c] {
+        \includegraphics[width=0.9\textwidth]{png/figure_00013}
+      }
+    };
+    % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
+    % \node [text width=8cm, scale=1.0, rotate={90}] at (1.5,7.5) { $S_{D}$, ``discovery'' signal strength  };
+  \end{tikzpicture}
+  \caption{
+    \label{figure:sum_mom_vd13}
+    P1+P2 at VD13
+  }
+\end{figure}
 
-Spectrum has been measured in \cite{RPC_1977_Baer}
-\begin{itemize}
-\item
-  compare 1mm to 0.1 mm to 0.2mm
-\end{itemize}
+The converter thickness is chosen based on the distributions shown in Figure~\ref{figure:sum_mom_vd13}.
+Plotted: $P_{tot} = P_1 + P_2$ at VD13, virtual detector in front of the tracker fro events with
+two particles, an electron and a positron with P > 30 MeV/c and producing 20 or more straw hits in the tracker each.
+Such particles provide a good proxy to the reconstructable tracks.
 
+The event yield increases with the converter thickness. However of interest for the scale calibration only
+are the events close to the kinematic edge.
+The highest yield of events with P > 128 Mev/c corresponds to the 100 um gold foil, and that determines
+the choice of 100 um thick converter.
 
 %%% Local Variables:
 %%% mode: latex
