draft rpc_on_hydrogen.tex

--- a/rpc_on_hydrogen.tex
+++ b/rpc_on_hydrogen.tex
@@ -1,3 +1,4 @@
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{RPC on hydrogen}
 
@@ -11,6 +12,99 @@ Has been measured in \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
     after that is determined, use spectrum on CH2 to generate photons
   \end{itemize}
 }
+
+
+\kate{
+Events of interest for calibration are the monochomatic RPC photons at 129.4 MeV from $\pi^{-} p \to n \gamma$ on
+hydrogen. Measurement of this process is shown in 
+Figure~\ref{figure:1971_bistirlich_fig_02_h2}
+, the photon energy spectrum from pion capture on hydrogen, which also includes lower energy photons from the charge exchange reaction. 
+For the $\rm{CH_2}$ spectrum in 
+Figure~\ref{figure:1971_bistirlich_fig_09_ch2}
+, photons from RPC on carbon occupy the region between the two hydrogen peaks.
+To produce a photon in the 129.4 MeV peak, a negative pion stopped on
+a $\rm{CH_2}$  degrader must both (i) capture on a hydrogen rather than carbon nucleus, and (ii) interact
+radiatively with the proton via $\pi^{-} p \to n \gamma$ rather than producing an intermediate $\pi^0$.
+}
+
+
+\begin{figure}[H]
+ \begin{minipage}{.5\textwidth}
+  \includegraphics[width=0.9\textwidth]{png/1971_bistirlich_fig_02_h2}
+  \captionsetup{width=.8\linewidth}
+  \caption[width=0.9\textwidth]{
+      \label{figure:1971_bistirlich_fig_02_h2}
+    \kate{Photon energy spectrum from negative pion capture on hydrogen \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.}
+    }
+ \end{minipage}
+ \begin{minipage}{.5\textwidth}
+  \includegraphics[width=0.9\textwidth]{png/1971_bistirlich_fig_09_ch2}
+  \captionsetup{width=.8\linewidth}
+  \caption[width=0.9\textwidth]{
+  \label{figure:1971_bistirlich_fig_09_ch2}
+    \kate{Photon energy spectrum from negative pion capture on $\rm{CH_2}$ \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.}
+   }
+ \end{minipage}
+\end{figure}
+
+\kate{
+The probability of pion capture on the hydrogen component of the $\rm{CH_2}$ compound is
+$\rm{ W_H = (12.9 \pm 1.8) \times 10^{-3 }}$
+ as used in Ref.~X \path{1991_Harston_PhysRevA.44.103}
+ , an average of previous measurements. 
+ This accounts for both hydrogen atoms in the $\rm{CH_2}$ molecule, and is larger than but consistent with the
+ corresponding measurement (expressed as percent) in Ref.~\cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
+ Negative pions captured on hydrogen have a $ (41.4 \pm 3.2) \% $
+ probability of interacting via $\pi^{-} p \to n \gamma$ and producing a photon at 129.4 MeV
+ \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
+ The remaining pions captured on hydrogen produce two photons via the charge exchange reaction
+ $ \pi^{-} p \to n \pi^0 $ with $\pi^0  \to \gamma \gamma $,
+ which results in the lower energy peak of the hydrogen spectrum. 
+
+Together these factors yield a probability of $ (5.34 \pm 0.85) \times 10^{-3} $
+for obtaining 129.4 MeV RPC photons from pion capture on $\rm{CH_2}$.
+}
+
+\kate{
+\bigskip
+ Additional reference for \path{radiative_pion_capture.bib}:
+}
+{\tiny
+{\begin{verbatim}
+@article{1991_Harston_PhysRevA.44.103,
+  title = {Capture and transfer of stopped pions in alcohols},
+  author = {Harston, M. R. and Armstrong, D. S. and Measday, D. F. and Stanislaus, S. and Weber, P. and Horv\'ath, D.},
+  journal = {Phys. Rev. A},
+  volume = {44},
+  issue = {1},
+  pages = {103--110},
+  numpages = {0},
+  year = {1991},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.44.103},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.44.103}
+}
+\end{verbatim}}}
+
+
+
+
+\kate{
+\bigskip
+  Potential changes:
+  \begin{itemize}
+  \item 
+    Include individual previous measurements if needed.
+  \end{itemize}
+}
+
+
+
+
+
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: t
