--- a/reconstructed_spectrum.tex
+++ b/reconstructed_spectrum.tex
@@ -40,7 +40,7 @@ of the tracker - as a proxy to the reconstructed photon momentum
   \end{tikzpicture}
   \caption{
     \label{figure:sum_mom_vd13}
-    P1+P2 at VD13
+    P1+P2 at VD09, VD10, VD13
   }
 \end{figure}
 
@@ -53,6 +53,23 @@ The event yield increases with the converter thickness. However of interest for 
 are the events close to the kinematic edge.
 The highest yield of events with P > 128 Mev/c corresponds to the 100 um gold foil, and that determines
 the choice of 100 um thick converter.
+
+\begin{figure}[H]
+  \begin{tikzpicture}
+    \node[anchor=south west,inner sep=0] at (0,0.) {
+      % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
+      \makebox[\textwidth][c] {
+        \includegraphics[width=0.9\textwidth]{pdf/figure_00044}
+      }
+    };
+    % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
+    % \node [text width=8cm, scale=1.0, rotate={90}] at (1.5,7.5) { $S_{D}$, ``discovery'' signal strength  };
+  \end{tikzpicture}
+  \caption{
+    \label{figure:sum_mom_vd09_10_13}
+    P1+P2 at VD09, VD10, VD13
+  }
+\end{figure}
 
 %%% Local Variables:
 %%% mode: latex
