--- a/rpc_on_hydrogen.tex
+++ b/rpc_on_hydrogen.tex
@@ -4,17 +4,6 @@
 
 Has been measured in \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
 
-{\red
-  \begin{itemize}
-  \item 
-    need an estimate of the fraction of stopped pions captured by hydrogen
-  \item
-    after that is determined, use spectrum on CH2 to generate photons
-  \end{itemize}
-}
-
-
-\kate{
 Events of interest for calibration are the monochomatic RPC photons at 129.4 MeV from $\pi^{-} p \to n \gamma$ on
 hydrogen. Measurement of this process is shown in 
 Figure~\ref{figure:1971_bistirlich_fig_02_h2}
@@ -25,7 +14,6 @@ Figure~\ref{figure:1971_bistirlich_fig_09_ch2}
 To produce a photon in the 129.4 MeV peak, a negative pion stopped on
 a $\rm{CH_2}$  degrader must both (i) capture on a hydrogen rather than carbon nucleus, and (ii) interact
 radiatively with the proton via $\pi^{-} p \to n \gamma$ rather than producing an intermediate $\pi^0$.
-}
 
 
 \begin{figure}[H]
@@ -47,7 +35,6 @@ radiatively with the proton via $\pi^{-} p \to n \gamma$ rather than producing a
  \end{minipage}
 \end{figure}
 
-\kate{
 The probability of pion capture on the hydrogen component of the $\rm{CH_2}$ compound is
 $\rm{ W_H = (12.9 \pm 1.8) \times 10^{-3 }}$
  as used in Ref.~X \path{1991_Harston_PhysRevA.44.103}
@@ -63,32 +50,27 @@ $\rm{ W_H = (12.9 \pm 1.8) \times 10^{-3 }}$
 
 Together these factors yield a probability of $ (5.34 \pm 0.85) \times 10^{-3} $
 for obtaining 129.4 MeV RPC photons from pion capture on $\rm{CH_2}$.
-}
 
-\kate{
-\bigskip
- Additional reference for \path{radiative_pion_capture.bib}:
-}
-{\tiny
-{\begin{verbatim}
-@article{1991_Harston_PhysRevA.44.103,
-  title = {Capture and transfer of stopped pions in alcohols},
-  author = {Harston, M. R. and Armstrong, D. S. and Measday, D. F. and Stanislaus, S. and Weber, P. and Horv\'ath, D.},
-  journal = {Phys. Rev. A},
-  volume = {44},
-  issue = {1},
-  pages = {103--110},
-  numpages = {0},
-  year = {1991},
-  month = {Jul},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevA.44.103},
-  url = {https://link.aps.org/doi/10.1103/PhysRevA.44.103}
-}
-\end{verbatim}}}
-
-
-
+% \bigskip
+%  Additional reference for \path{radiative_pion_capture.bib}:
+% {\tiny
+% {\begin{verbatim}
+% @article{1991_Harston_PhysRevA.44.103,
+%   title = {Capture and transfer of stopped pions in alcohols},
+%   author = {Harston, M. R. and Armstrong, D. S. and Measday, D. F. and Stanislaus, S. and Weber, P. and Horv\'ath, D.},
+%   journal = {Phys. Rev. A},
+%   volume = {44},
+%   issue = {1},
+%   pages = {103--110},
+%   numpages = {0},
+%   year = {1991},
+%   month = {Jul},
+%   publisher = {American Physical Society},
+%   doi = {10.1103/PhysRevA.44.103},
+%   url = {https://link.aps.org/doi/10.1103/PhysRevA.44.103}
+% }
+% \end{verbatim}}}
+% 
 
 \kate{
 \bigskip
@@ -98,11 +80,6 @@ for obtaining 129.4 MeV RPC photons from pion capture on $\rm{CH_2}$.
     Include individual previous measurements if needed.
   \end{itemize}
 }
-
-
-
-
-
 
 
 %%% Local Variables:
