RPC section update

--- a/rpc_on_hydrogen.tex
+++ b/rpc_on_hydrogen.tex
@@ -1,4 +1,5 @@
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{RPC on hydrogen}
 
@@ -22,7 +23,7 @@ radiatively with the proton via $\pi^{-} p \to n \gamma$ rather than producing a
   \captionsetup{width=.8\linewidth}
   \caption[width=0.9\textwidth]{
       \label{figure:1971_bistirlich_fig_02_h2}
-    \kate{Photon energy spectrum from negative pion capture on hydrogen \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.}
+    Photon energy spectrum from negative pion capture on hydrogen \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
     }
  \end{minipage}
  \begin{minipage}{.5\textwidth}
@@ -30,14 +31,14 @@ radiatively with the proton via $\pi^{-} p \to n \gamma$ rather than producing a
   \captionsetup{width=.8\linewidth}
   \caption[width=0.9\textwidth]{
   \label{figure:1971_bistirlich_fig_09_ch2}
-    \kate{Photon energy spectrum from negative pion capture on $\rm{CH_2}$ \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.}
+    Photon energy spectrum from negative pion capture on $\rm{CH_2}$ \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
    }
  \end{minipage}
 \end{figure}
 
 The probability of pion capture on the hydrogen component of the $\rm{CH_2}$ compound is
-$\rm{ W_H = (12.9 \pm 1.8) \times 10^{-3 }}$
- as used in Ref.~X \path{1991_Harston_PhysRevA.44.103}
+$\newline \rm{ W_H = (12.9 \pm 1.8) \times 10^{-3 }}$
+ as used in Ref.~\cite{RPC_1991_Harston_PhysRevA.44.103}
  , an average of previous measurements. 
  This accounts for both hydrogen atoms in the $\rm{CH_2}$ molecule, and is larger than but consistent with the
  corresponding measurement (expressed as percent) in Ref.~\cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
@@ -48,29 +49,10 @@ $\rm{ W_H = (12.9 \pm 1.8) \times 10^{-3 }}$
  $ \pi^{-} p \to n \pi^0 $ with $\pi^0  \to \gamma \gamma $,
  which results in the lower energy peak of the hydrogen spectrum. 
 
-Together these factors yield a probability of $ (5.34 \pm 0.85) \times 10^{-3} $
+Together these factors yield a probability of around $ 5 \times 10^{-3} $
 for obtaining 129.4 MeV RPC photons from pion capture on $\rm{CH_2}$.
 
-% \bigskip
-%  Additional reference for \path{radiative_pion_capture.bib}:
-% {\tiny
-% {\begin{verbatim}
-% @article{1991_Harston_PhysRevA.44.103,
-%   title = {Capture and transfer of stopped pions in alcohols},
-%   author = {Harston, M. R. and Armstrong, D. S. and Measday, D. F. and Stanislaus, S. and Weber, P. and Horv\'ath, D.},
-%   journal = {Phys. Rev. A},
-%   volume = {44},
-%   issue = {1},
-%   pages = {103--110},
-%   numpages = {0},
-%   year = {1991},
-%   month = {Jul},
-%   publisher = {American Physical Society},
-%   doi = {10.1103/PhysRevA.44.103},
-%   url = {https://link.aps.org/doi/10.1103/PhysRevA.44.103}
-% }
-% \end{verbatim}}}
-% 
+
 
 \kate{
 \bigskip
