- add fit of the (P1+P2) spectrum)

--- a/reconstructed_spectrum.tex
+++ b/reconstructed_spectrum.tex
@@ -59,7 +59,7 @@ the choice of 100 um thick converter.
     \node[anchor=south west,inner sep=0] at (0,0.) {
       % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
       \makebox[\textwidth][c] {
-        \includegraphics[width=0.9\textwidth]{pdf/figure_00044}
+        \includegraphics[width=0.9\textwidth]{png/pipenu_bpip4b0_murat_track_ana_trk_0_p_fit}
       }
     };
     % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
@@ -70,6 +70,17 @@ the choice of 100 um thick converter.
     P1+P2 at VD09, VD10, VD13
   }
 \end{figure}
+
+Figure ~\ref{figure:sum_mom_vd09_10_13} shows the $P_{tot}$ distribution for 100 um converter
+with the binning of 100 keV/c. The most probable energy loss is about 800/c keV, 
+and the resolution function has the FWHM of about 700 keV/c.
+These numbers are not very different from the same numbers for conversion electrons.
+
+Assuming that, similar to the CE case, the width of the distribution is dominated by the energy losses,
+the reconstructed $\gamma \to e^+e^-$ peak will have the FWHM $\simeq 1$ MeV/c and the offset
+of about 1 MeV from its nominal position.
+
+{\red need fit uncertainties to estimate the uncertainty on the edge position }
 
 %%% Local Variables:
 %%% mode: latex
