started updates on calibration_time

--- a/calibration_time.tex
+++ b/calibration_time.tex
@@ -6,6 +6,19 @@ In this section we assume that the experimental background doesn't affect
 the determination accuracy of the momentum edge of RPC photon peak
 and estimate the time needed for the calibration.
 
+\kate{
+\begin{itemize}
+\item 
+From $ 2.5 \times 10^8 $ protons on target, 67.42 negative pions stop on the $\rm{CH_2}$ part of the degrader at T>200ns.
+\item 
+A negative pion stopped in $\rm{CH_2}$ has a probability of about $ 5 \times 10^{-3} $ of producing a 129.4 MeV RPC photon from capture on hydrogen (Section 3).
+\item 
+The optimal geometry from Section 4 places a gold converter at radius R=25.0cm with thickness 0.1mm. Of $10^5$ RPC photons generated with angle 0<$\cos \theta$<0.2, [139 $\rightarrow$ replace with value from simulation result with updated angle] produce $e^+ e^-$ pairs that can likely be reconstructed in the tracker. Events counted as likely reconstructable have $e^+$ and $e^-$ each with at least 20 straw hits and momentum p>=40MeV. 
+Kate $\rightarrow$Will check the results of the new simulation with larger angle, and also check conditions.
+\end{itemize}
+The product of these first three factors is a calibration event rate on the order of $10^{-12} $ per POT.
+}
+
 \begin{itemize}
 \item 
   required accuracy of the momentum scale calibration $@$100 MeV/c: $\sigma_P/P$ < 100 keV/c
