--- a/calibration_time.tex
+++ b/calibration_time.tex
@@ -13,8 +13,7 @@ From $ 2.5 \times 10^8 $ protons on target, 67.42 negative pions stop on the $\r
 \item 
 A negative pion stopped in $\rm{CH_2}$ has a probability of about $ 5 \times 10^{-3} $ of producing a 129.4 MeV RPC photon from capture on hydrogen (Section 3).
 \item 
-The optimal geometry from Section 4 places a gold converter at radius R=25.0cm with thickness 0.1mm. Of $10^5$ RPC photons generated with angle 0<$\cos \theta$<0.2, [139 $\rightarrow$ replace with value from simulation result with updated angle] produce $e^+ e^-$ pairs that can likely be reconstructed in the tracker. Events counted as likely reconstructable have $e^+$ and $e^-$ each with at least 20 straw hits and momentum p>=40MeV. 
-Kate $\rightarrow$Will check the results of the new simulation with larger angle, and also check conditions.
+The optimal geometry from Section 4 places a gold converter at radius R=25.0cm with thickness 0.1mm. Of $10^5$ RPC photons generated with angle 0<$\cos \theta$<0.1, 139 produce $e^+ e^-$ pairs that can likely be reconstructed in the tracker. Events counted as likely reconstructable have $e^+$ and $e^-$ each with at least 20 straw hits and momentum P > 30MeV/c. 
 \end{itemize}
 The product of these first three factors is a calibration event rate on the order of $10^{-12} $ per POT.
 }
@@ -23,21 +22,36 @@ The product of these first three factors is a calibration event rate on the orde
 \item 
   required accuracy of the momentum scale calibration $@$100 MeV/c: $\sigma_P/P$ < 100 keV/c
 \item
-  {\red how many events do we need ?}
+  {\red how many events do we need ?} \kate{Estimates in the remaining items assume that 1000 $ \gamma \to e^+ e^- $ events would be sufficient to reconstruct the high-energy edge of the 129.4 MeV RPC photon momentum distribution.}
 \item
-  For a yield of $10^{-13}$ events/POT, collecting 1000 events requires $10^{16}$ protons on target.
-  In one-batch mode, an average expected pulse intensity is $1.6 \times 10^7$, and
-  an average  pulse rate of 1$.6 \times 10^5$ pulses/sec correspond to the rate of $2.5 \times 10^{12}$ protons/sec.
+  \kate{For a yield of $10^{-12}$ events/POT, collecting 1000 events requires $10^{15}$ protons on target.
+  In one-batch mode, an average expected pulse intensity is $1.6 \times 10^7$, with one pulse every 1695ns for about 0.4s of each 1.4s Main Injector cycle. The resulting rate is $2.7 \times 10^{12}$ protons/sec. }
+%\item
+%  For a yield of $10^{-13}$ events/POT, collecting 1000 events requires $10^{16}$ protons on target.
+%  In one-batch mode, an average expected pulse intensity is $1.6 \times 10^7$, and
+%  an average  pulse rate of 1$.6 \times 10^5$ pulses/sec correspond to the rate of $2.5 \times 10^{12}$ protons/sec.
 \item
   Assuming running at 10\% of nominal beam intensity and the data collection efficiency of 50\%,
-  collecting 1000 reconstructable \piplusenu\ events would require
-  $10^{16}/(1.25 \times 10^{11}) \sim 10^5$ seconds, or about one day of running.
+  collecting 1000 reconstructable \kate{ $ \gamma \to e^+ e^- $ events would require on the order of
+  $10^{15}/( 0.1 \cdot 0.5 \cdot  2.7 \times 10^{12}) \sim 10^4$ seconds, achievable in} one day of running.
+%\item
+%  Assuming running at 10\% of nominal beam intensity and the data collection efficiency of 50\%,
+%  collecting 1000 reconstructable \piplusenu\ events would require
+%  $10^{16}/(1.25 \times 10^{11}) \sim 10^5$ seconds, or about one day of running.
 \item
   running at 10\% of the nominal beam intensity in one-batch mode and with the digitization starting
   at 200 ns corresponds to the total number of background hits per microbunch of about 200,
   so the pileup at T>300 ns should not be a problem.
 \end{itemize}
 
+\kate{
+\bigskip
+  Potential changes:
+  \begin{itemize}
+  \item 
+    Update with simulation results using larger photon angle. Earlier results here follow Section 4 for consistency. 
+  \end{itemize}
+}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: t
